Add "Restrict GUI access to management interface only" control.

--- a/plugins/dynamix/SSLSettings.page
+++ b/plugins/dynamix/SSLSettings.page
@@ -105,6 +105,12 @@ function checkPorts(form) {
 </script>
 <form markdown="1" name="SSLSettings" method="POST" action="/update.htm" target="progressFrame">
 <input type="hidden" name="changePorts" value="apply">
+Restrict GUI access to management interface only:
+: <select name="RESTRICT_MGT" size="1" class="narrow">
+  <?=mk_option($var['RESTRICT_MGT'], "no", "No")?>
+  <?=mk_option($var['RESTRICT_MGT'], "yes", "Yes")?>
+  </select>
+
 Use SSL/TLS:
 : <select name="USE_SSL" size="1" class="narrow">
   <?=mk_option($var['USE_SSL'], "auto", "Auto")?>
@@ -137,19 +143,19 @@ Use SSL/TLS:
 > background processes by chaning this field to **Yes**.
 >
 > **nginx certificate handling details**
-> 
+>
 > The nginx startup script looks for a SSL certificate on the USB boot flash in this order:<br>
 > `config/ssl/certs/certficate_bundle.pem`<br>
 > `config/ssl/certs/<server-name>_unraid_bundle.pem`
-> 
+>
 > If neither file exists, a self-signed SSL certificate is automatically created and stored in<br>
 > `config/ssl/certs/<server-name>_unraid_bundle.pem`<br>
 >
 > Provisioning a Let's Encrypt certificate writes the certificate to<br>
 > `config/ssl/certs/certficate_bundle.pem`<br>
-> 
+>
 > **nginx stapling support**
-> 
+>
 > Whether nginx enables OCSP Staping is determined by which certificate is in use:<br>
 > `config/ssl/certs/certficate_bundle.pem` => Yes<br>
 > `config/ssl/certs/<server-name>_unraid_bundle.pem` => No
